<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_recycler"
    android:background="@drawable/back_putih"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/white_grey_border_bottom_white"
        android:layout_margin="5dp"
        android:id="@+id/header_recyclerstreaming"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/streaming_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            app:civ_border_color="#fff"
            android:src="@drawable/ic_account"
            app:civ_border_width="1dp"/>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nama_pengirim"
                android:fontFamily="@font/robotobold"
                android:id="@+id/streaming_dari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:fontFamily="@font/robotothin"
                android:text="@string/_00_21"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:id="@+id/streaming_jam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:autoLink="all"
        android:textIsSelectable="true"
        android:padding="15dp"
        android:fontFamily="@font/robotoregular"
        android:textSize="16sp"
        android:text="@string/data_pesan"
        android:id="@+id/streaming_pesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
