<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gradient"
    tools:context=".RekamanKajianActivity">

    <!--    REKAMAN IS THERE -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linear_list_rekaman"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:text="@string/list_rekaman_kajian"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/recycler_rekaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--    NO REKAMAN KAJIAN -->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/relative_no_rekaman"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textview_no_rekaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tidak_ada_rekaman"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/robotoboldcon"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textview_no_rekaman"/>
    </RelativeLayout>

    <!--    Loading is Here -->
    <ProgressBar
        android:id="@+id/progressbar_list_rekaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>