<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:background="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="10dp"
        android:layout_weight="0.2">

        <ImageView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logoabuaziz"
            android:contentDescription="@null" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical"
            android:layout_weight="0.65"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="12sp"
                android:fontFamily="@font/robotoboldcon"
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kajian_online_streaming"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ma_had_abu_aziz"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/robotobold"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/tv_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:fontFamily="@font/robotocondensed" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_weight="0.15"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/btn_player"
            android:background="@drawable/button_abuabu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/play"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:maxHeight="55dp"
            android:maxWidth="55dp"
            android:contentDescription="@null" />

        <ImageButton
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/btn_stop"
            android:background="@drawable/button_abuabu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/stop"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:maxHeight="55dp"
            android:maxWidth="55dp"
            android:contentDescription="@null" />

        <ProgressBar
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:id="@+id/progressBarPlayer"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>