<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        android:src="@drawable/logoabuaziz"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/FrameLayoutFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/signInFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_putih"
                android:drawableStart="@drawable/fb"
                android:drawableLeft="@drawable/fb"
                android:drawablePadding="20dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/masuk_dengan_akun_facebook"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/facebook"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/atau"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/FrameLayoutGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_putih"
                android:drawableStart="@drawable/google"
                android:drawableLeft="@drawable/google"
                android:drawablePadding="20dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/masuk_dengan_akun_google"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/google"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>