<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gradient"
    tools:context=".PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/sedang_diputar"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/player_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/player_judul"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@null"
                android:src="@drawable/logoabuaziz" />

            <RelativeLayout
                android:id="@+id/angka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_logo"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tv_total_waktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/current_waktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/player_seekbar"
                style="@style/tallerBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/angka"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/player_judul_kajian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_seekbar"
                android:fontFamily="@font/robotobold"
                android:text="@string/judul_kajian"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/player_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_judul_kajian"
                android:fontFamily="@font/robotoregular"
                android:text="@string/_20_jan_2012_12_00"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />


            <ProgressBar
                android:id="@+id/tv_buffered"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/player_seekbar"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/control_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <Button
                android:visibility="gone"
                android:id="@+id/player_btn_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/play" />

            <LinearLayout
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/player_btn_pause"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/pause" />

                <Button
                    android:id="@+id/player_btn_resume"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_play"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/player_btn_stop"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_stop" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>